# candidate-intelligence-engine

./: .gitignore  README.md  main.py  pyproject.toml  requirements-dev.txt  requirements-ml.txt  requirements.txt  run_full_system.py  transform_output.json
config/: default_projection.json
docs/: architecture.md
docs/adr/: 0001-clean-architecture.md  0002-deterministic-ml.md
examples/: ats.json  notes.txt  recruiter.csv
schemas/: candidate.schema.json
src/candidate_transformer/: __init__.py  domain.py  pipeline.py
src/candidate_transformer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/candidate_transformer/api/: app.py
src/candidate_transformer/api/static/: index.css  index.html  index.js
src/candidate_transformer/cli/: main.py
src/candidate_transformer/confidence/: scorer.py
src/candidate_transformer/embeddings/: provider.py
src/candidate_transformer/entity_resolution/: resolver.py
src/candidate_transformer/extraction/: parsers.py
src/candidate_transformer/ingestion/: detection.py
src/candidate_transformer/merge/: merger.py
src/candidate_transformer/normalization/: normalizer.py
src/candidate_transformer/projection/: projector.py
src/candidate_transformer/utils/: errors.py  logging.py  timing.py
src/candidate_transformer/validation/: json_schema.py
tests/golden/: test_golden_output.py
tests/integration/: test_api.py  test_cli.py  test_pipeline.py
tests/unit/: test_coverage_gap.py  test_ingestion_extraction_normalization.py  test_matching_merge_projection_validation.py
