[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "candidate-transformer"
version = "0.1.0"
description = "Multi-source candidate data transformer with deterministic ML-assisted matching."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Eightfold Internship Assignment" }]
dependencies = [
  "fastapi>=0.111,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
  "pydantic>=2.7,<3.0",
  "python-multipart>=0.0.9,<1.0",
  "jsonschema>=4.22,<5.0",
  "rapidfuzz>=3.9,<4.0",
  "pypdf>=4.2,<6.0",
]

[project.optional-dependencies]
ml = [
  "sentence-transformers>=3.0,<4.0",
]
dev = [
  "pytest>=8.2,<9.0",
  "pytest-cov>=5.0,<7.0",
  "black>=24.4,<26.0",
  "isort>=5.13,<7.0",
  "flake8>=7.0,<8.0",
  "mypy>=1.10,<2.0",
  "bandit>=1.7,<2.0",
  "pre-commit>=3.7,<5.0",
  "httpx>=0.27,<1.0",
]

[project.scripts]
candidate-transformer = "candidate_transformer.cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
candidate_transformer = ["py.typed"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100
src_paths = ["src", "tests"]

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "src"
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["sentence_transformers.*", "pypdf.*", "jsonschema.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-q --cov=src/candidate_transformer --cov-report=term-missing"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
branch = true
source = ["src/candidate_transformer"]

[tool.coverage.report]
fail_under = 80
show_missing = true
